# pvr.nextpvr

./: CMakeLists.txt
debian/: changelog.in  control  copyright  rules
pvr.nextpvr/: addon.xml
src/: DialogRecordPref.cpp  Socket.cpp  client.cpp  client.h  liveshift.cpp  liveshift.h  md5.h  os-dependent.h  pvrclient-nextpvr.cpp  pvrclient-nextpvr.h
